--- a/Template/edit-member.html
+++ b/Template/edit-member.html
@@ -38,7 +38,7 @@
         <li class="dropdown">
           <a class="dropdown-toggle" data-toggle="dropdown" href="#">Mina butiker<span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="#">Hantera butiker & produkter</a></li>
+            <li><a href="member-add-shop.html">Hantera butiker & produkter</a></li>
             <li><a href="member-info.html">Produktimport</a></li>
           </ul>
         </li>
@@ -150,9 +150,7 @@
             </form>
         </div>
 </div>
-    <script src="script.js"></script>
-</body>
-    <footer class="footer">
+        <footer class="footer">
         <p id="copyright">Presenteras av Koholo Shopping Network © 2016 koholo.com. Alla rättigheter förbehållna</p>
         
         <div class="container">
@@ -167,4 +165,7 @@
             </div>
 				</div>
     </footer>
+    <script src="script.js"></script>
+</body>
+
 </html>
