--- a/Template/member-info.html
+++ b/Template/member-info.html
@@ -71,8 +71,20 @@ Tab
         
     </div>
     </div>
-<footer id="sidfot" class="footer">
+<footer class="footer">
         <p id="copyright">Presenteras av Koholo Shopping Network © 2016 koholo.com. Alla rättigheter förbehållna</p>
+        
+        <div class="container">
+    <div class="text-center">
+                    <ul class="social-network social-circle">
+                        <li><a href="https://www.instagram.com/koholo_shopping/" class="icoInsta" title="Instagram"><i class="fa fa-instagram"></i></a></li>
+                        <li><a href="https://www.facebook.com/koholo" class="icoFacebook" title="Facebook"><i class="fa fa-facebook"></i></a></li>
+                        <li><a href="https://twitter.com/koholoshopping" class="icoTwitter" title="Twitter"><i class="fa fa-twitter"></i></a></li>
+                        <li><a href="https://plus.google.com/u/0/+Koholoshopping" class="icoGoogle" title="Google +"><i class="fa fa-google-plus"></i></a></li>
+                        <li><a href="https://www.linkedin.com/company-beta/5307166/" class="icoLinkedin" title="Linkedin"><i class="fa fa-linkedin"></i></a></li>
+                    </ul>
+            </div>
+				</div>
     </footer>
     <script src="script.js"></script>
 </body>
